# caretaker-qa

./: .devbox.yaml  .env.example  .gitignore  AGENTIC_QUICKSTART.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.prebuilt  Makefile  README.md  SMOKE.md  SUMMARY.md  application.conf  application.conf.example  audit.toml  deny.toml  docker-compose.e2e.yml  docker-compose.observability.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt  tailwind.config.js  watchlist.yml
.cargo/: audit.toml
.claude/commands/: benchmark.md  ci.md  deploy.md  docs.md  migrate.md  rfc.md  security.md  test.md
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: database.md  development.md  devops-build-triage.md  docs-reconciliation.md  maintainer-self-heal.md  operations.md  security-triage.md
.github/maintainer/: config.yml
.github/scripts/: build_release_binaries.sh  plan_benchmark_run.sh  validate_multiarch_manifest.sh
.github/workflows/: ci-doctor.lock.yml  ci.yml  claude.yml  codeql.yml  e2e-kind-extended.yml  e2e-kind.yml  maintainer.yml  nightly-coverage.yml  nightly.yml  release.yml  reusable-kind-e2e.yml  secret-audit.yml  security-audit.yml  security-scan.yml  semgrep.yml  snyk-security.yml  weekly-benchmarks.yml  weekly-docs-reconciliation.yml
.hive/: issues.jsonl
.kube/: kind-kubeconfig
.skills/: README.md  add-endpoint.md  db-migration.md  deploy-k8s.md  oauth2-debug-token.md  oauth2-register-client.md  oauth2-test-flow.md  rfc-compliance-check.md
benchmarks/: .gitignore  PLAN.md  README.md  analyze-results.sh  docker-compose.yml  run-benchmarks.sh
benchmarks/setup/: init-db.sql
crates/oauth2-actix/: Cargo.toml
crates/oauth2-actix/src/: lib.rs
crates/oauth2-actix/src/actors/: auth_actor.rs  client_actor.rs  mod.rs  token_actor.rs  token_actor_pool.rs
crates/oauth2-actix/src/handlers/: admin.rs  admin_extra.rs  admin_keys.rs  client.rs  device.rs  dpop.rs  dpop_nonce.rs  events.rs  jwks_cache.rs  login.rs  mod.rs  oauth.rs  oidc_logout.rs  profile.rs  session.rs  token.rs  wellknown.rs
crates/oauth2-actix/src/middleware/: admin_guard.rs  denylist.rs  https_redirect.rs  mod.rs  rate_limit.rs  resilience.rs
crates/oauth2-actix/src/security/: jti_replay.rs  mod.rs
crates/oauth2-config/: Cargo.toml
crates/oauth2-config/src/: lib.rs
crates/oauth2-core/: Cargo.toml
crates/oauth2-events/: Cargo.toml
crates/oauth2-events/src/: envelope.rs  lib.rs  propagation.rs
crates/oauth2-events/src/backends/: kafka.rs  rabbit.rs  redis_streams.rs
crates/oauth2-observability/: Cargo.toml  build.rs
crates/oauth2-observability/src/: actix.rs  lib.rs  metrics.rs  redis.rs  storage.rs  telemetry.rs
crates/oauth2-openapi/: Cargo.toml
crates/oauth2-ports/: Cargo.toml
crates/oauth2-server/: Cargo.toml
crates/oauth2-server/src/: lib.rs
crates/oauth2-social-login/: Cargo.toml
crates/oauth2-social-login/src/: circuit_breaker.rs  lib.rs  service.rs
crates/oauth2-social-login/src/handlers/: auth.rs
crates/oauth2-storage-factory/: Cargo.toml
crates/oauth2-storage-mongo/: Cargo.toml
crates/oauth2-storage-sqlx/: Cargo.toml
docs/: AI_TOOLING_ENHANCEMENTS.md  AI_TOOLING_SUMMARY.md  MCP_ENHANCEMENT_PLAN.md  RFC_CONFORMANCE_AUDIT.md  caretaker-setup.md  flux.md  index.md  oauth2-spec-audit.md  observability.md  qa-scenarios.md  security-audit.md  supply-chain-security.md
docs/admin/: clients.md  dashboard.md  tokens.md
docs/ai-workflows/: EXAMPLES.md
docs/api/: endpoints.md
docs/architecture/: overview.md
docs/compliance/: RFC_COMPLIANCE.md
docs/deployment/: distributed-scaling.md  kubernetes.md  production.md
docs/development/: architecture.md  contributing.md  extending.md  performance-load-testing.md  testing.md
docs/examples/: eventing.md  service-to-service.md
docs/getting-started/: configuration.md  quickstart.md  social-login-setup.md
docs/observability/: tracing-and-logging.md
docs/operations/: deployment.md  observability.md  runbooks.md
docs/qa-scenarios/: 12-handoff-review-harvest.md  12b-handoff-review-harvest-fresh.md
docs/usage/: admin-api.md  integrations.md  oauth2-oidc.md
e2e/sql/: V999__e2e_proxy_client.sql
examples/resource-server-node/: server.js
k8s/: README.md
k8s/base/: configmap.yaml  hpa.yaml  (+8 more)
mcp-server/: README.md
oauth2-ratelimit/: Cargo.toml
oauth2-ratelimit/src/: in_memory.rs  lib.rs  redis.rs  token_bucket.rs
oauth2-resilience/: Cargo.toml
oauth2-resilience/src/: back_pressure.rs  bulkhead.rs  circuit_breaker.rs  lib.rs
reports/: 2026-05-24.json  2026-05-24.md  2026-05-25.json  2026-05-25.md  2026-05-26.json  2026-05-26.md  2026-06-23.json  2026-06-23.md  2026-06-24.json  2026-06-24.md  2026-06-25.json  2026-06-25.md  2026-06-26.json  2026-06-26.md  2026-06-27.json  2026-06-27.md  2026-06-28.json  2026-06-28.md  2026-06-29.json  2026-06-29.md  2026-06-30.json  2026-06-30.md  2026-07-01.json  2026-07-01.md  2026-07-02.json  2026-07-02.md
scripts/: e2e-test.sh  e2e_kind.sh  e2e_kind_extended.sh  kind_up_observability.sh  setup-secrets.sh
supply-chain/: config.toml
templates/: admin_dashboard.html  error.html  login.html  profile.html
tests/: admin_denylist_middleware.rs  admin_extra.rs  admin_paging.rs  admin_rbac.rs  admin_storage_contract.rs  compliance_oidc_core.rs  compliance_rfc6749.rs  compliance_rfc6750.rs  compliance_rfc7636.rs  compliance_rfc7662_7009.rs  compliance_rfc8414.rs  compliance_rfc8628.rs  compliance_wave3.rs  compliance_wave4.rs  compliance_wave5.rs  compliance_wave6.rs  conftest.py  device_flow.rs  metrics_paved_path_baseline.rs  metrics_wiring.rs  opaque_tokens.rs  otel_trace_propagation.rs  phase2_rfc_compliance.rs  rfc8252_native_apps.rs  rfc9700_code_replay.rs  rfc9700_compliance.rs  rfc9700_dpop_nonce.rs  rfc9700_https_enforcement.rs  rfc9700_introspection_pii.rs  rfc9700_jti_replay.rs  rfc9700_rate_limit.rs  rfc9700_require_state.rs  rfc_compliance.rs  security_http.rs  security_token_exchange_expiry.rs  test_cli.py  test_dedup.py  test_feeds.py  test_feeds_auth.py  test_filter_output.py  (+8 more)
(+150 files in other folders)
