[build-system]
requires = ["uv>=0.2.14", "wheel"]
build-backend = "uv"

[project]
name = "caretaker-qa"
version = "0.1.0"
description = "Live QA harness for ianlintner/caretaker"
authors = [{ name = "Ian Lintner", email = "ian@lintner.com" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click >= 8.1, <9",
    "feedparser >= 6.0, <7",
    "httpx >= 0.27, <1",
    "langgraph >= 0.2, <1",
    "litellm >= 1.50, <2",
    "nh3 >= 0.2, <1",
    "packaging >= 24, <25",
    "pydantic >= 2.8, <3",
    "pyyaml >= 6, <7",
    "rich >= 13, <15",
    "tenacity >= 8.2, <10",
]

[project.urls]
Homepage = "https://github.com/ianlintner/caretaker-qa"
Issues = "https://github.com/ianlintner/caretaker-qa/issues"

[project.scripts]
qa-agent = "qa_agent.cli:main"

[project.optional-dependencies]
dev = [
    "mypy >= 1.11, <2",
    "pytest >= 8, <9",
    "pytest-asyncio >= 0.24, <1",
    "pytest-cov >= 5, <7",
    "respx >= 0.21, <1",
    "ruff >= 0.7, <1",
    "types-pyyaml",
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
# asyncio tests must be marked, otherwise they're run in sync mode.
asyncio_mode = "strict"

# pydantic v1 is on the way out; many deps still use it. filter the
# noisy-but-harmless warning until they catch up.
filterwarnings = [
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3.14 or greater.:UserWarning",
]


[tool.ruff]
# Assume Python 3.12
target-version = "py312"

[tool.ruff.format]
# Like black, but with a few minor tweaks.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
# Allow calling `reportError` with a string literal. This is fine for now
# because we don't yet internationalize user-facing strings.
suspicious-source-issue-allow-leading-string-literal = true

[tool.uv]
preview = true

[tool.uv.sources]
caretaker-qa = { editable = "." }
