[package]
name = "oauth2-resilience"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Circuit breaker, back-pressure, and bulkhead patterns for rust-oauth2-server"

[dependencies]
tokio = { version = "1", features = ["sync", "time", "rt"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
