[package]
name = "oauth2-actix"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Actix-web HTTP layer for rust-oauth2-server (handlers + actors)"

[dependencies]
oauth2-core = { path = "../oauth2-core", features = ["actix"] }
oauth2-config = { path = "../oauth2-config" }
oauth2-events = { path = "../oauth2-events" }
oauth2-observability = { path = "../oauth2-observability" }
oauth2-ports = { path = "../oauth2-ports" }
oauth2-ratelimit = { path = "../../oauth2-ratelimit" }
oauth2-resilience = { path = "../../oauth2-resilience" }

actix = "0.13"
actix-web = "4.4"
actix-session = { version = "0.11", features = ["cookie-session"] }

futures = "0.3"

# Password hashing (Argon2id)
argon2 = "0.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.35", features = ["sync"] }

tracing = "0.1"

chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.9.4", default-features = false, features = ["std", "std_rng", "os_rng"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
subtle = "2.5"
lru = "0.16"

sha2 = "0.10"
base64 = "0.22"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }

# JWKS (RS256 public key publishing)
rsa = { version = "0.9", features = ["pem"] }

# HTTP client for back-channel logout
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# URL parsing and form/query decoding (used for strict OAuth parameter handling)
url = "2.5"
percent-encoding = "2.3"

# Optional Redis L2 cache behind in-process LRU
[dependencies.redis]
version = "0.27"
features = ["tokio-comp", "connection-manager"]
optional = true

[features]
default = []
redis-cache = ["redis"]
