[package]
name = "oauth2-config"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
hocon = { version = "0.9", default-features = false, features = ["serde-support"] }
config = "0.15"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
