[package]
name = "oauth2-server"
version = "0.6.2"
edition = "2021"
license = "MIT OR Apache-2.0"

description = "Runnable OAuth2 server binary assembly built from extracted crates"

[dependencies]
# Extracted crates
oauth2-actix = { path = "../oauth2-actix" }
oauth2-config = { path = "../oauth2-config" }
oauth2-core = { path = "../oauth2-core" }
oauth2-events = { path = "../oauth2-events" }
oauth2-observability = { path = "../oauth2-observability", features = ["actix"] }
oauth2-openapi = { path = "../oauth2-openapi" }
oauth2-ratelimit = { path = "../../oauth2-ratelimit" }
oauth2-resilience = { path = "../../oauth2-resilience" }
oauth2-social-login = { path = "../oauth2-social-login" }
oauth2-storage-factory = { path = "../oauth2-storage-factory", default-features = false }

# Actix runtime + web
actix-web = "4.4"
actix = "0.13"
actix-cors = "0.7"
actix-files = "0.6.10"
actix-session = { version = "0.11", features = ["cookie-session"] }

# OpenAPI UI
utoipa = "5.4"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

# Observability
tracing = "0.1"
tracing-actix-web = "0.7"

async-trait = "0.1"

# Misc
serde_json = "1.0"
env_logger = "0.11"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["sync"] }

[dependencies.redis]
version = "0.27"
features = ["tokio-comp", "connection-manager"]
optional = true

[features]
default = ["sqlx"]

# SQL-backed storage (SQLite/Postgres) via SQLx.
sqlx = ["oauth2-storage-factory/sqlx"]

mongo = ["oauth2-storage-factory/mongo"]

# Optional eventing backends (pass-through to oauth2-events)
events-redis = ["oauth2-events/events-redis"]
events-kafka = ["oauth2-events/events-kafka"]
events-rabbit = ["oauth2-events/events-rabbit"]

# Optional Redis-backed distributed runtime features.
redis-cache = ["oauth2-actix/redis-cache", "dep:redis"]
redis-rate-limit = ["oauth2-ratelimit/redis-backend"]

# Convenience feature for distributed deployments.
distributed = ["redis-cache", "redis-rate-limit", "events-redis"]
