[package]
name = "oauth2-social-login"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
oauth2-core = { path = "../oauth2-core" }
oauth2-config = { path = "../oauth2-config" }
oauth2-ports = { path = "../oauth2-ports" }

# Actix integration (handlers)
actix-web = "4.4"
actix-session = { version = "0.11", features = ["cookie-session"] }

# OAuth2 + HTTP
oauth2 = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Password hashing (Argon2id) – for creating placeholder hashes for social users
argon2 = "0.5"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# UUID for user IDs
uuid = { version = "1", features = ["v4"] }
